rota de consulta e inserção de curso
